@@ -45,6 +45,7 @@ ADsP (8.18 ~ 8.29)
 DataCamp DataScience (8.31 ~ 9.12)
 기초통계학 I&II (9.1 ~ )
 BigContest (9.2 ~ 9.28)
-React Tutorial (9.15 ~ )
+React Tutorial (9.15 ~ /)
 42 Seoul Cursus (10.2 ~ )
 Introduction to System Programming (10.1 ~ )
+Google Machine Learing Bootcamp (10.16 ~ )
